--- a/src/test/java/config/config.properties
+++ b/src/test/java/config/config.properties
@@ -1,2 +1,6 @@
 URL = https://reqres.in/
 serviceURL = /api/users
+email1 = george.bluth@reqres.in
+fName1 = George
+lName1 = Bluth
+avatar1 = https://reqres.in/img/faces/1-image.jpg
