--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
     <version>20160212</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.12.7.1</version>
+</dependency>
+
 
   </dependencies>
 
