Negative scenarios added

--- a/src/test/java/config/config.properties
+++ b/src/test/java/config/config.properties
@@ -1,5 +1,7 @@
 URL = https://reqres.in/
 serviceURL = /api/users
+userNotFound = https://reqres.in/api/users/23
+invalidURL = https://reqresponse.in/
 email1 = george.bluth@reqres.in
 fName1 = George
 lName1 = Bluth
